kube/prd/mgt/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pep503-simple-repo-broker
  annotations:
    metallb.universe.tf/address-pool: public
spec:
  selector:
    app: pep503-simple-repo-broker
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
